--- a/my-first-website.html
+++ b/my-first-website.html
@@ -11,5 +11,14 @@
 
     <p>Hello, World!</p>
     <p>Welcome to my first webpage</p>
+
+
+    <p>Here are some things I'm going to learn about coding:</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>And a lot more!</li>
+    </ul>
   </body>
 </html>
