--- a/my-fisrt-website.html
+++ b/my-fisrt-website.html
@@ -21,6 +21,6 @@
     </ul>
   </body>
   <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
-  <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+  <p>Here is a link to my <a href="favourite-things.html">favorite things</a>.</p>
   <img src="images/elephant.jpg" alt="A photo of an elephant">
 </html>
