renamed my-first-website.html index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </ul>
   </body>
   <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
-  <p>Here is a link to my <a href="favourite-things.html">favorite things</a>.</p>
-  <img src="images/rope.gif" alt="A photo of an elephant">
+  <p>Here is a link to my <a href="favourite-things.html"><strong>favorite things</strong></a>.</p>
+  <img src="images/lightning.gif" alt="some nice weather">
+
 </html>
