added 'one' css file; added styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>My first webpage!</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/one.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>My First Webpage</h1>
@@ -22,6 +23,6 @@
   </body>
   <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
   <p>Here is a link to my <a href="favourite-things.html"><strong>favorite things</strong></a>.</p>
-  <img src="images/lightning.gif" alt="some nice weather">
+  <img src="images/elephant.jpg" alt="some nice weather">
 
 </html>
