--- a/favourite-things.html
+++ b/favourite-things.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>My Favourite Things</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/one.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>These are my Favourite things</h1>
